@@ -3,7 +3,7 @@
 \title{Double-Seasonal Holt-Winters Forecasting}
 \usage{dshw(y, period1, period2, h=2*max(period1,period2), 
     alpha=NULL, beta=NULL, gamma=NULL, omega=NULL, phi=NULL, 
-    lambda=NULL, armethod=TRUE)}
+    lambda=NULL, armethod=TRUE, model = NULL)}
 
 \arguments{
 \item{y}{Either an \code{\link{msts}} object with two seasonal periods or a numeric vector.}
@@ -17,6 +17,7 @@
 \item{phi}{Autoregressive parameter. If \code{NULL}, the parameter is estimated using least squares.}
 \item{lambda}{Box-Cox transformation parameter. Ignored if \code{NULL}. Otherwise, data transformed before model is estimated.}
 \item{armethod}{If TRUE, the forecasts are adjusted using an AR(1) model for the errors.}
+\item{model}{If it's specified, an existing model is applied to a new data set.}
 }
 
 \description{Returns forecasts using Taylor's (2003) Double-Seasonal Holt-Winters method.}
